# podcast-intel

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STAKEHOLDER_PANEL_REVIEW.md  podcast.yaml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  community-events.yml  episode-watch.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  PQS_FRAMEWORK.md
examples/: README.md
examples/sample-output/: pipeline_results.json  pqs_v3_scores.json  pre_recording_brief_ep43.html  transcript_snippet.json
src/podcast_intel/: __init__.py  cli.py  config.py
src/podcast_intel/analysis/: __init__.py  filler_detector.py  metrics.py  ner_pipeline.py  scorer.py  sentiment.py  silence_analyzer.py
src/podcast_intel/coaching/: __init__.py  coach.py  interruptions.py
src/podcast_intel/ingestion/: __init__.py  downloader.py  mock_ingest.py  rss_parser.py
src/podcast_intel/models/: __init__.py  database.py  entities.py  schema.py
src/podcast_intel/presets/: __init__.py  english.yaml  hebrew.yaml
src/podcast_intel/search/: __init__.py  embedder.py  query.py  vector_store.py
src/podcast_intel/transcription/: __init__.py  diarize.py  mock_transcribe.py  transcribe.py  whisper_transcriber.py
src/podcast_intel/triggers/: __init__.py  briefing_generator.py  community_events.py  rss_watcher.py
src/podcast_intel/triggers/providers/: __init__.py  football.py
tests/: conftest.py  test_community_events.py  test_football_provider.py  test_mock_system.py  test_rss_watcher.py  test_scorer.py
tools/: analyze_panel_chemistry.py  diarize_episode.py  generate_one_pager.py  merge_diarization.py  run_episode_analysis.py  text_based_diarization.py
